--- a/__JBF_Submission__/txt_5_Trading_Strategy.tex
+++ b/__JBF_Submission__/txt_5_Trading_Strategy.tex
@@ -516,7 +516,7 @@ In \cref{fig:portfolio_returns_comparison} we plot the cumulative gross returns 
 \begin{subfigure}{\textwidth}
 \caption{Panel A: Cumulative Gross Returns of $\mathcal{P}_{\text{KMeans}}$}
 \centering
-\includegraphics[scale=0.44]{fig_7a_KMeans_Portfolio_Cum_Returns_(L=4,theta=0.5k).pdf}
+\includegraphics[scale=0.44]{fig_7a_KMeans_Portfolio.pdf}
 \end{subfigure}
 
 \vspace{0.75cm}
@@ -525,7 +525,7 @@ In \cref{fig:portfolio_returns_comparison} we plot the cumulative gross returns 
 \begin{subfigure}{\textwidth}
 \caption{Panel B: Cumulative Gross Returns of $\mathcal{P}_{\text{LLM}}$}
 \centering
-\includegraphics[scale=0.44]{fig_7b_LLAMA_Portfolio_Cum_Returns_(L=4,theta=0.5k).pdf}
+\includegraphics[scale=0.44]{fig_7b_LLAMA_Portfolio.pdf}
 \end{subfigure}
 
 \vspace{0.5cm}
