--- a/__JBF_Submission__/txt_A2_Hyperparameter_Justification.tex
+++ b/__JBF_Submission__/txt_A2_Hyperparameter_Justification.tex
@@ -21,14 +21,14 @@ In \cref{fig:KMeans_hyperparameter_justification_L} we can see that a choice of 
   
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A1a_KMeans_RobustnessCheck_SR_Train_Set_vs_L_[Change_L].pdf}
+    \includegraphics[width=\textwidth]{fig_A1a_KMeans_SR_Train_vs_L.pdf}
     \caption{Plot of $SR^{\mathcal P^{tr}}(L)$ over a grid of $L$}
     \label{fig:K_hyp_1}
   \end{subfigure}
   \hspace{0.05\textwidth} % Add horizontal space between the subfigures
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A1b_KMeans_RobustnessCheck_SR_Validation_Set_vs_L_[Change_L].pdf}
+    \includegraphics[width=\textwidth]{fig_A1b_KMeans_SR_Validation_vs_L.pdf}
     \caption{Plot of $SR^{\mathcal P^{val}}(L)$ over a grid of $L$}
     \label{fig:K_hyp_2}
   \end{subfigure}  
@@ -47,14 +47,14 @@ On the other hand, the choice of $\theta=\integer{0.5\cd 26}=13$ is a choice tha
   \centering
     \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A2a_KMeans_RobustnessCheck_SR_Train_Set_vs_Theta_[Change_theta].pdf}
+    \includegraphics[width=\textwidth]{fig_A2a_KMeans_SR_Train_vs_theta.pdf}
     \caption{Plot of $SR^{\mathcal P^{tr}}(\theta)$ over a grid of $\theta$}
     \label{fig:K_hyp_3}
   \end{subfigure}
   \hspace{0.05\textwidth} % Add horizontal space between the subfigures
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A2b_KMeans_RobustnessCheck_SR_Validation_Set_vs_Theta_[Change_theta].pdf}
+    \includegraphics[width=\textwidth]{fig_A2b_KMeans_SR_Validation_vs_theta.pdf}
     \caption{Plot of $SR^{\mathcal P^{val}}(\theta)$ over a grid of $\theta$}
     \label{fig:K_hyp_4}
   \end{subfigure}
@@ -76,7 +76,7 @@ Following a similar logic as below, the choice of $L=4$ sets a consensus between
   
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A3a_LLAMA_RobustnessCheck_SR_Train_Set_vs_L_[Change_L].pdf}
+    \includegraphics[width=\textwidth]{fig_A3a_LLAMA_SR_Train_vs_L.pdf}
     \caption{Plot of $SR^{\mathcal P^{tr}}(L)$ over a grid of $L$}
     \label{fig:LLM_hyp_1}
     
@@ -84,7 +84,7 @@ Following a similar logic as below, the choice of $L=4$ sets a consensus between
   \hspace{0.05\textwidth} % Add horizontal space between the subfigures
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A3b_LLAMA_RobustnessCheck_SR_Validation_Set_vs_L_[Change_L].pdf}
+    \includegraphics[width=\textwidth]{fig_A3b_LLAMA_SR_Validation_vs_L.pdf}
     \caption{Plot of $SR^{\mathcal P^{val}}(L)$ over a grid of $L$}
     \label{fig:LLM_hyp_2}
   \end{subfigure}
@@ -103,14 +103,14 @@ Finally, the same conclusion as in KMeans applies here. By selecting $\theta=\in
 
     \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A4a_LLAMA_RobustnessCheck_SR_Train_Set_vs_Theta_[Change_theta].pdf}
+    \includegraphics[width=\textwidth]{fig_A4a_LLAMA_SR_Train_vs_theta.pdf}
     \caption{Plot of $SR^{\mathcal P^{tr}}(\theta)$ over a grid of $\theta$}
     \label{fig:LLM_hyp_3}
   \end{subfigure}
   \hspace{0.05\textwidth} % Add horizontal space between the subfigures
   \begin{subfigure}[b]{0.46\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig_A4b_LLAMA_RobustnessCheck_SR_Validation_Set_vs_Theta_[Change_theta].pdf}
+    \includegraphics[width=\textwidth]{fig_A4b_LLAMA_SR_Validation_vs_theta.pdf}
     \caption{Plot of $SR^{\mathcal P^{val}}(\theta)$ over a grid of $\theta$}
     \label{fig:LLM_hyp_4}
   \end{subfigure}
