last changes before submission

--- a/Synthetic_Control_in_Asset_Pricing/__main__.tex
+++ b/Synthetic_Control_in_Asset_Pricing/__main__.tex
@@ -69,8 +69,11 @@ This paper develops a novel framework for applying the Synthetic Control Method 
 %\input{txt_Data.tex}
 
 %%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
-%\input{txt_Methodology.tex}
-\input{txt_Statistical_Arbitrage.tex}
+\input{txt_myself.tex}
+\input{txt_Methodology.tex}
+%\input{txt_Statistical_Arbitrage.tex}
+%\input{txt_16_Dec.tex}
+
 
 %%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
 %\input{txt_Conclusion.tex}
