--- a/__JBF_Submission__/__manuscript__.tex
+++ b/__JBF_Submission__/__manuscript__.tex
@@ -1,6 +1,6 @@
-\documentclass[preprint,doubleblind]{elsarticle}
+\documentclass[review,doubleblind,10.5pt]{elsarticle}
 %\documentclass[article]{elsarticle}
-%\documentclass[preprint,12pt]{elsarticle}
+%\documentclass[preprint]{elsarticle}
 
 %---------------------- MACROS -----------------------
 \usepackage{Author_Macros}
