--- a/__JBF_Submission__/txt_A0_Appendix.tex
+++ b/__JBF_Submission__/txt_A0_Appendix.tex
@@ -1,6 +1,6 @@
 % 1) KMeans Algorithm
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{KMeans Algorithm}
+\subsection{KMeans Algorithm} \label{sec:A1}
 \input{txt_A1_KMeans.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -30,9 +30,9 @@
 \input{txt_A5_sample_of_articles_per_cluster.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Function Calling with LLaMA-3
+% Function Calling with Llama-3
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Function Calling with LLaMA-3}
+\subsection{Function Calling with Llama-3}
 \input{txt_A6_LLAMA_function_calling.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
