--- a/__JBF_Submission__/txt_A2_Hyperparameter_Justification.tex
+++ b/__JBF_Submission__/txt_A2_Hyperparameter_Justification.tex
@@ -1,4 +1,4 @@
-\subsection{Hyperparameter Choice}
+\subsection{Hyperparameter Choice Justification} \label{sec:A2}
 Our hyperparameters are $L$ and $\theta$. Recall that $L$ denotes the number of trading days over which we hold the positions in the beta-neutral strategy, while $\theta$ represents the upper bound on each side (long and short) for the amount of clusters we select for the trading strategy. The specific choice of hyperparameters we made for the results presented in the paper were:
 \begin{align*}
 L &= 4
