--- a/__JBF_Submission__/txt_A6_LLAMA_function_calling.tex
+++ b/__JBF_Submission__/txt_A6_LLAMA_function_calling.tex
@@ -1,14 +1,14 @@
 \definecolor{lightgray}{gray}{0.6} % Define a light gray color
 
 \begin{algorithm}[H]
-\caption{Function Calling Workflow for LLaMA-3}
+\caption{Function Calling Workflow for Llama-3}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \label{alg:function_calling}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{algorithmic}[1]
 \Require $\D$: Dataset of news articles
 \Ensure Structured JSON output for each article
-\State Initialize LLaMA-3 model via GroqCloud API
+\State Initialize Llama-3 model via GroqCloud API
 \For{each article $i \in \D$} \Comment{\scalebox{0.9}{\textcolor{lightgray}{Iterate over each article in the dataset}}}
 %    \State Set up system message with instructions for LLM
     \State \textbf{Message: System} \Comment{\scalebox{0.9}{\textcolor{lightgray}{Define the role and task for the LLM}}}
@@ -36,13 +36,13 @@ Parameters: \{\texttt{firms}: \bblue{\texttt{array}} of objects\}, where each ob
 \end{quote} 
  
     
-    \State Send initial messages and tools to LLaMA-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Initiate interaction with the LLM}}}
-    \State Retrieve response from LLaMA-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Get the initial response from the LLM}}}
-    \If{Function call is requested by LLaMA-3} \Comment{\scalebox{0.9}{\textcolor{lightgray}{Check if the LLM needs to call a function}}}
+    \State Send initial messages and tools to Llama-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Initiate interaction with the LLM}}}
+    \State Retrieve response from Llama-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Get the initial response from the LLM}}}
+    \If{Function call is requested by Llama-3} \Comment{\scalebox{0.9}{\textcolor{lightgray}{Check if the LLM needs to call a function}}}
         \State Execute \texttt{news\_parser} function with provided arguments \Comment{\scalebox{0.9}{\textcolor{lightgray}{Run the function}}}
         \State Append function response to the conversation \Comment{\scalebox{0.9}{\textcolor{lightgray}{Include function output in the dialogue}}}
-        \State Send updated messages to LLaMA-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Continue the conversation with new information}}}
-        \State Retrieve final response from LLaMA-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Get the final output from the LLM}}}
+        \State Send updated messages to Llama-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Continue the conversation with new information}}}
+        \State Retrieve final response from Llama-3 \Comment{\scalebox{0.9}{\textcolor{lightgray}{Get the final output from the LLM}}}
     \EndIf
     \State Extract and store structured JSON output \Comment{\scalebox{0.9}{\textcolor{lightgray}{Save the processed data}}}
 \EndFor
