--- a/__JBF_Submission__/txt_A8_Trading_Intensity.tex
+++ b/__JBF_Submission__/txt_A8_Trading_Intensity.tex
@@ -1,4 +1,4 @@
-\subsection{Trading Intensity}
+\subsection{Trading Intensity} \label{sec:A8}
 The extraordinary performance of our proposed LLM-based methodology warrants a careful examination of its implementation costs and practical viability. While our primary objective has been to develop a framework that better captures the economic content of news articles and their subsequent market impact, the practical implementation of such strategies necessarily involves trading frictions that could affect their real-world efficacy. In this section, we analyze the trading intensity patterns of both methodologies to provide a more complete assessment of their relative merits and to understand how transaction costs might influence their comparative advantages.
 We begin by examining the temporal evolution of open positions for both approaches, which provides insights into their underlying trading dynamics and stability characteristics. This analysis is followed by detailed trading intensity metrics and concludes with a reassessment of portfolio statistics after accounting for transaction costs.
 
