--- a/__JBF_Submission__/__title_page__.tex
+++ b/__JBF_Submission__/__title_page__.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint]{elsarticle}
+\documentclass[preprint, 10.5pt]{elsarticle}
 %\documentclass[article]{elsarticle}
 %\documentclass[preprint,12pt]{elsarticle}
 
@@ -21,7 +21,7 @@
 \ead{jesus.villota@cemfi.edu.es}
 
 \cortext[cor1]{Corresponding author: Jesus Villota Miranda <\href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}>} 
-\fntext[fn1]{I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank Gustavo Schwenkler for his thoughtful discussion, as well as the participants of the Banking \& Finance Seminar at CEMFI, the Generative AI in Finance Conference at Concordia University and the Mirian Andrés Seminar at the University of La Rioja. Finally, I gratefully acknowledge financial support from Banco de España (BdE).}
+\fntext[fn1]{I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank discussants for their helpful comments, as well as the participants of the Banking \& Finance Seminar (CEMFI), the Generative AI in Finance Conference (Concordia University), the Mirian Andrés Seminar (University of La Rioja) and the 3rd Contemporary Issues in Financial Markets and Banking (Nottingham Trent University). Finally, I gratefully acknowledge financial support from Banco de España (BdE).}
 
 \affiliation[1]{
 	organization={CEMFI}, 
@@ -45,48 +45,48 @@ Large Language Models, Business News, Stock Market Reaction, Market Efficiency
 %----------------------------------------------------
 \maketitle
 
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\newpage
-%\setcounter{page}{1}
-%
-%%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
-%\input{txt_1_Introduction.tex}
-%
-%%%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
-%\input{txt_2_Data.tex}
-%
-%%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
-%\input{txt_3_General_Setup.tex}
-%\input{txt_4_Clustering.tex}
-%\input{txt_5_Trading_Strategy.tex}
-%
-%%%%%%%%%%%%%% ROBUSTNESS CHECKS %%%%%%%%%%%%%%%%%%
-%\input{txt_6_Robustness_Checks.tex}
-%
-%%%%%%%%%%%%%%%% TRADING INTENSITY %%%%%%%%%%%%%%%%%%%%%
-%%\input{txt_Trading_Intensity.tex}
-%
-%%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
-%\input{txt_7_Conclusion.tex}
-%
-%%%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
-%\bibliography{bib_references_DOI.bib}
-%%\bibliographystyle{plain}
-%\bibliographystyle{elsarticle-num}
-%%----------------------------------------------------
-%\newpage
-%% To make sure all the tables/figures appear before the appendix
-%\processdelayedfloats 
-%% Reset the numbering for appendix figures and tables
-%\renewcommand{\thefigure}{A\arabic{figure}} 
-%\renewcommand{\thetable}{A\arabic{table}}
-%%----------------------------------------------------
-%
-%%%%%%%%%%%%%%%%%%% APPENDIX %%%%%%%%%%%%%%%%%%%%%%
-%\appendix
-%\section{Appendix}
-%\input{txt_A0_Appendix.tex}
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\setcounter{page}{1}
+
+%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
+\input{txt_1_Introduction.tex}
+
+%%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
+\input{txt_2_Data.tex}
+
+%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
+\input{txt_3_General_Setup.tex}
+\input{txt_4_Clustering.tex}
+\input{txt_5_Trading_Strategy.tex}
+
+%%%%%%%%%%%%% ROBUSTNESS CHECKS %%%%%%%%%%%%%%%%%%
+\input{txt_6_Robustness_Checks.tex}
+
+%%%%%%%%%%%%%%% TRADING INTENSITY %%%%%%%%%%%%%%%%%%%%%
+%\input{txt_Trading_Intensity.tex}
+
+%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
+\input{txt_7_Conclusion.tex}
+
+%%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
+\bibliography{bib_references_DOI.bib}
+%\bibliographystyle{plain}
+\bibliographystyle{elsarticle-num}
+%----------------------------------------------------
+\newpage
+% To make sure all the tables/figures appear before the appendix
+\processdelayedfloats 
+% Reset the numbering for appendix figures and tables
+\renewcommand{\thefigure}{A\arabic{figure}} 
+\renewcommand{\thetable}{A\arabic{table}}
+%----------------------------------------------------
+
+%%%%%%%%%%%%%%%%%% APPENDIX %%%%%%%%%%%%%%%%%%%%%%
+\appendix
+\section{Appendix}
+\input{txt_A0_Appendix.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
