--- a/__JBF_Submission__/txt_0_Abstract.tex
+++ b/__JBF_Submission__/txt_0_Abstract.tex
@@ -1,6 +1,14 @@
-Empirical research shows that markets do not always efficiently incorporate news, particularly when information is complex or ambiguous. While existing studies employ sentiment analysis, topic modeling, or vector embeddings to analyze financial news, these methods often fail to capture the economic structure of information and its firm-specific implications. We propose a novel approach that leverages Large Language Models (LLMs) to analyze Spanish business news articles during a period of high uncertainty (2020-2021). Our methodology guides LLMs to systematically identify and classify firm-specific economic shocks in news articles according to their type (demand, supply, technological, policy, financial), magnitude (minor, major), and direction (positive, negative). This structured classification allows for a more nuanced understanding of how markets process complex information. Using a simple trading strategy, we demonstrate that our LLM-based classification significantly outperforms a benchmark based on vector embeddings clustering, generating consistent profits out-of-sample while maintaining transparent and durable trading signals. The results suggest that LLMs, when properly guided by economic frameworks, can effectively identify persistent patterns in how markets react to different types of firm-specific news. Our findings contribute to understanding market efficiency and information processing, while offering a promising new tool for analyzing financial narratives.
+% VERSION 1
+Markets do not always efficiently incorporate news, particularly when information is complex or ambiguous. Traditional text analysis methods fail to capture the economic structure of information and its firm-specific implications. We propose a novel methodology that guides LLMs to systematically identify and classify firm-specific economic shocks in news articles according to their type, magnitude, and direction. This economically-informed classification allows for a more nuanced understanding of how markets process complex information. Using a simple trading strategy, we demonstrate that our LLM-based classification significantly outperforms a benchmark based on clustering vector embeddings, generating consistent profits out-of-sample while maintaining transparent and durable trading signals. The results suggest that LLMs, when properly guided by economic frameworks, can effectively identify persistent patterns in how markets react to different types of firm-specific news. Our findings contribute to understanding market efficiency and information processing, while offering a promising new tool for analyzing financial narratives.
 
 
+
+
+% VERSION 2
+%Markets do not always efficiently incorporate news, particularly when information is complex or ambiguous. While existing studies employ sentiment analysis, topic modeling, or vector embeddings to analyze financial news, these methods often fail to capture the economic structure of information and its firm-specific implications. We propose a novel approach that leverages Large Language Models (LLMs) to analyze Spanish business news articles during a period of high uncertainty (2020-2021). Our methodology guides LLMs to systematically identify and classify firm-specific economic shocks in news articles according to their type (demand, supply, technological, policy, financial), magnitude (minor, major), and direction (positive, negative). This structured classification allows for a more nuanced understanding of how markets process complex information. Using a simple trading strategy, we demonstrate that our LLM-based classification significantly outperforms a benchmark based on vector embeddings clustering, generating consistent profits out-of-sample while maintaining transparent and durable trading signals. The results suggest that LLMs, when properly guided by economic frameworks, can effectively identify persistent patterns in how markets react to different types of firm-specific news. Our findings contribute to understanding market efficiency and information processing, while offering a promising new tool for analyzing financial narratives.
+
+
+% OLDEST VERSION
 %In financial markets, news impact stock prices. Despite the postulated \qquote{Efficient Market Hypothesis}, evidence shows inefficiencies, especially with complex information. 
 %Research attempting to explain such inefficiencies has often relied on dictionary-based methods, sentiment analysis, topic modeling, and more recently, vector-based models,
 %which still lack a comprehensive understanding of the economic implications of information. 
