--- a/__JBF_Submission__/txt_2_Data.tex
+++ b/__JBF_Submission__/txt_2_Data.tex
@@ -1,7 +1,8 @@
 \section{Data}
 This paper employs a dataset of Spanish business news articles sourced from Dow Jones Newswires, covering the period from June 24, 2020, to September 30, 2021. The selection of this timeframe is deliberate, driven by two key considerations. 
 %
-First, given the substantial computational demands of LLM-based analysis, we strategically focus on a smaller, carefully curated dataset. This deliberate scope reduction allows us to thoroughly demonstrate our novel methodology's effectiveness in decoding market-news relationships while keeping computational costs manageable. Rather than pursuing a broad-scale analysis, we prioritize proving our approach's utility through a focused, computationally feasible study that can serve as a foundation for future expansions.
+First, given the substantial computational demands of LLM-based analysis, we strategically focus on a smaller, carefully curated dataset. This deliberate scope reduction allows us to thoroughly demonstrate our novel methodology's effectiveness in decoding market-news relationships while keeping computational costs manageable. 
+%Rather than pursuing a broad-scale analysis, we prioritize proving our approach's utility through a focused, computationally feasible study that can serve as a foundation for future expansions.
 %
 Second, we specifically chose the Covid-19 era to test our methodology's extrapolative capabilities during periods of significant market instability and volatility. While existing textual algorithms typically perform well in stable market conditions, they often struggle to generalize effectively during periods of heightened uncertainty. By focusing on this volatile period, we can better assess our methodology's robustness and its ability to maintain predictive power under challenging market conditions.
 
@@ -91,7 +92,8 @@ The time series of the number of articles published per day throughout the sampl
 
 \textbf{Data Availability.} 
 % OPTION 1
-The dataset used in this study contains confidential information provided under agreements with the Bank of Spain and Dow Jones Newswires, and cannot be shared publicly or with third parties. We are committed to transparency in our research methods and are available to discuss our methodology and provide additional non-confidential details upon request.
+The dataset used in this study contains confidential information provided under agreements with the Bank of Spain and Dow Jones Newswires, and cannot be shared publicly or with third parties. Interested readers may access the same data from Dow Jones Newswires for a fee.
+%We are committed to transparency in our research methods and are available to discuss our methodology and provide additional non-confidential details upon request.
 % OPTION 2
 %Due to confidentiality and proprietary constraints, the dataset used in this research is not publicly available. Any inquiries regarding the data availability should be directed to the relevant parties who own the data.
 
